# BetterFSD

./: CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: ci.yml  cmake-ubuntu.yml  cmake-windows.yml  cmake.yml  codeql.yml
.github/workflows/ISSUE_TEMPLATE/: bug-report.md
fsd/: fsd.cpp  global.h  main.cpp  mm.cpp
program_directory/unix/: fsd.conf  rebootfsd.sh
program_directory/windows/: Rebooot Service  fsd.conf
src/: authenticate.cpp  authenticate.h  clinterface.cpp  fsd.cpp  fsd.h  fsdpaths.h  global.h  main.cpp  mm.cpp  servinterface.cpp  support.cpp  support.h  sysuser.cpp  user.cpp  wprofile.cpp
